[gd_scene load_steps=18 format=2]

[ext_resource path="res://modules/car/car.gd" type="Script" id=1]
[ext_resource path="res://resources/img/auto.png" type="Texture" id=2]
[ext_resource path="res://resources/img/explosion_2.png" type="Texture" id=3]
[ext_resource path="res://resources/img/explosion_3.png" type="Texture" id=4]
[ext_resource path="res://resources/img/explosion_1.png" type="Texture" id=5]
[ext_resource path="res://modules/state_machine/state_machine.gd" type="Script" id=6]
[ext_resource path="res://modules/car/states/normal.gd" type="Script" id=7]
[ext_resource path="res://modules/car/states/exploded.gd" type="Script" id=8]
[ext_resource path="res://modules/car/states/respawning.gd" type="Script" id=9]
[ext_resource path="res://modules/car/states/drifting.gd" type="Script" id=10]
[ext_resource path="res://resources/sfx/derrape.wav" type="AudioStream" id=11]
[ext_resource path="res://resources/sfx/running.wav" type="AudioStream" id=12]
[ext_resource path="res://resources/sfx/explosion.wav" type="AudioStream" id=13]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "explosion",
"speed": 3.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
radius = 9.0

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Animations:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=4]
resource_name = "respawning"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Animations:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.392157, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[node name="Car" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Animations" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 2 )
offset = Vector2( 1, 4 )

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1, 11 )
shape = SubResource( 5 )
disabled = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -1, 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Collision" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 5 )

[node name="Tween" type="Tween" parent="."]

[node name="RearLeft" type="Position2D" parent="."]
position = Vector2( -12, 30 )

[node name="RearRight" type="Position2D" parent="."]
position = Vector2( 9, 30 )

[node name="SFX" type="Node2D" parent="."]

[node name="Drift" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 11 )

[node name="Running" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 12 )
volume_db = -80.0

[node name="Explosion" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 13 )

[node name="States" type="Node" parent="."]
script = ExtResource( 6 )
initial_state = NodePath("Normal")

[node name="Normal" type="Node" parent="States"]
script = ExtResource( 7 )

[node name="Exploded" type="Node" parent="States"]
script = ExtResource( 8 )

[node name="ExplosionTimer" type="Timer" parent="States/Exploded"]
process_mode = 0
wait_time = 1.5
one_shot = true

[node name="Respawning" type="Node" parent="States"]
script = ExtResource( 9 )

[node name="RespawnTimer" type="Timer" parent="States/Respawning"]
process_mode = 0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="States/Respawning"]
root_node = NodePath("../../..")
anims/RESET = SubResource( 3 )
anims/respawning = SubResource( 4 )

[node name="Drifting" type="Node" parent="States"]
script = ExtResource( 10 )

[node name="Tween" type="Tween" parent="States/Drifting"]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="States/Exploded/ExplosionTimer" to="States/Exploded" method="_on_ExplosionTimer_timeout"]
[connection signal="timeout" from="States/Respawning/RespawnTimer" to="States/Respawning" method="_on_RespawnTimer_timeout"]
